# PowerControl

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.ca7ac72  CONFIG.ini  build.ninja  cmake_install.cmake  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  singleapplication.cpp  singleapplication.h  网络关机助手使用说明书.docx
.cmake/api/v1/reply/: cache-v2-3edc3656038228dafd2c.json  cmakeFiles-v1-7dd2ec1956ce76c7a2ae.json  codemodel-v2-62beaef2eab5895769e9.json  index-2021-02-07T06-44-46-0392.json  target-PowerControl-Debug-914c550611ac8777de54.json  target-PowerControl_autogen-Debug-0d0cef577dd7ebd3bc53.json  target-PowerControl_autogen_timestamp_deps-Debug-88404130e7bba54a7e32.json
BAT/: poweroff.bat
PowerControl_autogen/: deps  moc_predefs.h
PowerControl_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_images.cpp
PowerControl_autogen/include/: ui_mainwindow.h
images/: mainBack.psd
